examples/datalog/18_advanced_patterns/28_island_detection.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_islands
Knowledge graph 'test_islands' created.
Switched to knowledge graph: test_islands
> .kg use test_islands
Switched to knowledge graph: test_islands
> +data[(1, 1), (2, 1), (3, 0), (4, 1), (5, 1), (6, 1), (7, 0), (8, 1)].
Inserted 8 fact(s) into 'data'.
> island_start(Id) :- data(Id, 1), PrevId = Id - 1, data(PrevId, 0).
Script error: Parse error: Invalid term: 'Id - 1'
